--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
 
-    <title>Natours | Exciting tours for adventurous people</title>
+    <title>ExploreEssence | Exciting tours for adventurous people</title>
   </head>
   <body>
     <div id="alert-modal-hook"></div>
